Fix CORS: skip OPTIONS in JWT filter, permit all origins